--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,6 +12,16 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
 			<a class="navbar-brand" href="/">MTGDeckBuilder</a>
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="/decks">Decks</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="/users">User</a>
+				</li>
+			</ul>
 		</nav>
 	</header>
 	<main class="container">
