--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,11 @@
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="/users">User</a>
+					<% if logged_in? %>
+					<a class="nav-link" href="/user">Hello</a>
+					<% else %>
+					<a class="nav-link" href="/user">Login</a>
+					<% end %>
 				</li>
 			</ul>
 		</nav>
