--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,9 +20,9 @@
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<% if logged_in? %>
-					<a class="nav-link" href="/user">Hello</a>
+					<a class="nav-link" href="/user">Hello <%= current_user.name %></a>
 					<% else %>
-					<a class="nav-link" href="/user">Login</a>
+					<a class="nav-link" href="/login">Login</a>
 					<% end %>
 				</li>
 			</ul>
