--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -1,3 +1,14 @@
 <div class="card-body">
-
+	<form action="/login" method="POST" role="form">
+		<legend>Login</legend>
+		<div class="form-group">
+			<label for="username">Username</label>
+			<input type="text" class="form-control" id="username" name="username" placeholder="Username">
+		</div>
+		<div class="form-group">
+		  <label for="password">Password</label>
+		  <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+		</div>
+		<button type="submit" class="btn btn-primary">Submit</button>
+	</form>
 </div>
