--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<% if logged_in? %>
-					<a class="nav-link" href="/user">Hello <%= current_user.username %></a>
+					<a class="nav-link" href="/user">Hello <%= current_user&.username %></a>
 					<% else %>
 					<a class="nav-link" href="/login">Login</a>
 					<% end %>
