--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MTGDeckBuilder</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -38,8 +38,8 @@
 			<%= yield %>
 		</div>
 	</main>
-	<script src="js/jquery.slim.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
+	<script src="/js/jquery.slim.min.js"></script>
+	<script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
