--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,27 @@
+<div class="card-header">
+	<h1><%= @user&.username %></h1>
+</div>
 <div class="card-body">
-	<h1 class="card-title"><%= @user&.username %></h1>
+	<div class="row">
+		<div class="col-sm-6">
+			<div class="card">
+				<div class="card-header">
+					<h2>Info</h2>
+				</div>
+				<div class="card-body">
+
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6">
+			<div class="card">
+				<div class="card-header">
+					<h2>Decks</h2>
+				</div>
+				<div class="card-body">
+
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
