--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -18,8 +18,21 @@
 				<div class="card-header">
 					<h2>Decks</h2>
 				</div>
-				<div class="card-body">
-
+				<div class="row">
+					<div class="card-body">
+						<% if !@user.decks.blank? %>
+						<% for deck in @user.decks %>
+						<div class="col-sm-6">
+							<div class="card">
+								<img src="/images/Magic_card_back.jpg" class="card-img-top" alt="MTG Card Back">
+								<div class="card-body">
+									<%= deck.name %>
+								</div>
+							</div>
+						</div>
+						<% end %>
+						<% end %>
+					</div>
 				</div>
 			</div>
 		</div>
