--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,8 +14,13 @@
 			<a class="navbar-brand" href="/">MTGDeckBuilder</a>
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="/decks">Decks</a>
+					<a class="nav-link" href="/decks">All Decks</a>
 				</li>
+				<% if logged_in? %>
+				<li class="nav-item">
+					<a class="nav-link" href="/user/decks">My Decks</a>
+				</li>
+				<% end %>
 			</ul>
 			<ul class="navbar-nav">
 				<% if logged_in? %>
