--- a/app/views/user/decks/index.erb
+++ b/app/views/user/decks/index.erb
@@ -1,3 +1,27 @@
+<div class="card-header">
+	<div class="row">
+		<div class="col">
+			<h1>My Decks</h1>
+		</div>
+		<div class="col"></div>
+		<div class="col">
+			<button type="button" class="btn btn-primary float-right" onclick="location.href='/user/decks/new'">New</button>
+		</div>
+	</div>
+</div>
 <div class="card-body">
-
+	<div class="row">
+		<% if !@decks.blank? %>
+		<% for deck in @decks %>
+		<div class="col-sm-6">
+			<div class="card">
+				<img src="/images/Magic_card_back.jpg" class="card-img-top" alt="MTG Card Back">
+				<div class="card-body">
+					<%= deck.name %>
+				</div>
+			</div>
+		</div>
+		<% end %>
+		<% end %>
+	</div>
 </div>
