--- a/app/views/user/decks/index.erb
+++ b/app/views/user/decks/index.erb
@@ -14,12 +14,12 @@
 		<% if !@decks.blank? %>
 		<% for deck in @decks %>
 		<div class="col-sm-3">
-			<div class="card">
+			<a href="/user/decks/<%= deck.id %>" class="card">
 				<img src="/images/Magic_card_back.jpg" class="card-img-top" alt="MTG Card Back">
 				<div class="card-body">
 					<%= deck.name %>
 				</div>
-			</div>
+			</a>
 		</div>
 		<% end %>
 		<% end %>
