--- a/app/views/user/decks/show.erb
+++ b/app/views/user/decks/show.erb
@@ -1,3 +1,28 @@
+<div class="card-header">
+	<div class="row">
+		<div class="col">
+			<h1><%= @deck.name %></h1>
+		</div>
+		<div class="col"></div>
+		<div class="col">
+			<button type="button" class="btn btn-primary float-right"
+				onclick="location.href='/user/decks/<%= @deck.id %>/edit'">Edit</button>
+		</div>
+	</div>
+</div>
 <div class="card-body">
-
+	<div class="row">
+		<% if !@deck.cards.blank? %>
+		<% for card in @deck.cards %>
+		<div class="col-sm-6">
+			<a href="#" class="card">
+				<img src="<%= card.image_uri %>" class="card-img-top" alt="<%= card.name %>">
+				<div class="card-body">
+					<%= card.name %>
+				</div>
+			</a>
+		</div>
+		<% end %>
+		<% end %>
+	</div>
 </div>
