--- a/app/views/user/decks/edit.erb
+++ b/app/views/user/decks/edit.erb
@@ -5,8 +5,9 @@
 		</div>
 		<div class="col"></div>
 		<div class="col">
-			<form class="form-inline my-2 my-lg-0" method="POST" action="/user/decks/<%= @deck.id %>/add">
-				<input class="form-control mr-sm-2" name="card[name]" type="search" placeholder="Card Name" aria-label="Card Name">
+			<form class="form-inline my-2 my-lg-0" method="GET" action="/user/decks/<%= @deck.id %>/add">
+				<input class="form-control mr-sm-2" name="card_name" type="search" placeholder="Card Name"
+					aria-label="Card Name">
 				<button class="btn btn-primary my-2 my-sm-0" type="submit">Add Card</button>
 			</form>
 		</div>
