--- a/app/views/user/decks/add.erb
+++ b/app/views/user/decks/add.erb
@@ -5,17 +5,17 @@
 	<div class="row">
 		<% if !@cards.blank? %>
 		<% for card in @cards %>
-		<form action="/user/decks/<%= @deck.id %>/add" method="post">
-			<div class="col-sm-3 col-md-2 mb-2">
+		<div class="col-sm-3 col-md-2 mb-2">
+			<form action="/user/decks/<%= params[:id] %>/add" method="post">
 				<input id="hidden" type="hidden" name="card_id" value="<%= card.id %>">
-				<a type="submit" href="#" class="card">
+				<button type="submit" href="#" class="card">
 					<img src="<%= card.image_uri %>" class="card-img-top" alt="<%= card.name %>">
 					<div class="card-body">
 						<%= card.name %>
 					</div>
-				</a>
-			</div>
-		</form>
+				</button>
+			</form>
+		</div>
 		<% end %>
 		<% end %>
 	</div>
