--- a/app/views/decks/show.erb
+++ b/app/views/decks/show.erb
@@ -7,7 +7,7 @@
 		<% for card in @deck.cards %>
 		<div class="col-md-3 col-sm-2">
 			<a href="#" class="card">
-				<img src="<%= card.image_uri %>" class="card-img-top" alt="<%= card.name %">>
+				<img src="<%= card.image_uri %>" class="card-img-top" alt="<%= card.name %>">
 				<div class="card-body">
 					<%= card.name %>
 				</div>
