--- a/app/views/user/edit.erb
+++ b/app/views/user/edit.erb
@@ -2,5 +2,23 @@
 	<h1>Editing Your Profile</h1>
 </div>
 <div class="card-body">
-
+	<form action="/user" method="POST">
+		<input id="hidden" type="hidden" name="_method" value="PATCH">
+		<div class="form-group">
+			<label for="username">Username</label>
+			<input value="<%= @user.username %>" type="text" class="form-control" name="username" id="username"
+				placeholder="Username">
+		</div>
+		<div class="form-group">
+			<label for="current_password">Current Password</label>
+			<input type="password" class="form-control" name="current_password" id="current_password"
+				placeholder="Current Password">
+		</div>
+		<div class="form-group">
+			<label for="new_password">New Password</label>
+			<input type="password" class="form-control" name="new_password" id="new_password"
+				placeholder="New Password">
+		</div>
+		<button class="btn btn-primary" type="submit">Save</button>
+	</form>
 </div>
