--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -3,11 +3,11 @@
 		<legend>Login</legend>
 		<div class="form-group">
 			<label for="username">Username</label>
-			<input type="text" class="form-control" id="username" name="username" placeholder="Username">
+			<input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
 		</div>
 		<div class="form-group">
 		  <label for="password">Password</label>
-		  <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+		  <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
 		</div>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
