--- a/app/views/user/edit.erb
+++ b/app/views/user/edit.erb
@@ -7,7 +7,7 @@
 		<div class="form-group">
 			<label for="username">Username</label>
 			<input value="<%= @user.username %>" type="text" class="form-control" name="username" id="username"
-				placeholder="Username">
+				placeholder="Username" required>
 		</div>
 		<div class="form-group">
 			<label for="current_password">Current Password</label>
