--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,6 +32,9 @@
 				</li>
 				<% else %>
 				<li class="nav-item">
+					<a class="nav-link" href="/signup">Signup</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/login">Login</a>
 				</li>
 				<% end %>
