Add ReCAPTCHA to signup page

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,5 +1,5 @@
 <div class="card-body">
-	<form action="/signup" method="POST" role="form">
+	<form id="signup" action="/signup" method="POST" role="form">
 		<legend>Signup</legend>
 		<div class="form-group">
 			<label for="username">Username</label>
@@ -11,6 +11,13 @@
 			<input type="password" class="form-control" name="password" id="password" placeholder="Password" required
 				minlength="8">
 		</div>
-		<button type="submit" class="btn btn-primary">Signup</button>
+		<button class="btn btn-primary g-recaptcha" type="submit" data-sitekey="6Le6360ZAAAAAK-9VhFNVNNqGOOMS97mvVjvVu1y" data-callback='onSubmit'
+			data-action='submit'>Signup</button>
 	</form>
 </div>
+<script>
+	function onSubmit(token) {
+		document.getElementById("signup").submit();
+	}
+</script>
+<script src="https://www.google.com/recaptcha/api.js"></script>
